Model now evaluates Images member correctly. Variables rendering to '_' in HTML however.

--- a/AlbumShare2/AlbumShare2/Views/Shared/_Layout.cshtml
+++ b/AlbumShare2/AlbumShare2/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - AlbumShare2</title>
+    <title>@ViewData["Title"] - AlbumShare</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">AlbumShare2</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">AlbumShare</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -34,6 +34,7 @@
                     <li><a asp-area="" asp-controller="Users" asp-action="Index">Users</a></li>
                     <li><a asp-area="" asp-controller="Albums" asp-action="Index">Albums</a></li>
                     <li><a asp-area="" asp-controller="Posts" asp-action="Index">Posts</a></li>
+                    <li><a asp-area="" asp-controller="Images" asp-action="Index">Images</a></li>
                 </ul>
             </div>
         </div>
@@ -45,7 +46,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2019 - AlbumShare2</p>
+            <p>&copy; 2019 - AlbumShare</p>
         </footer>
     </div>
 
