--- a/AlbumShare2/AlbumShare2/Views/Albums/Index.cshtml
+++ b/AlbumShare2/AlbumShare2/Views/Albums/Index.cshtml
@@ -1,5 +1,4 @@
 ﻿@model IEnumerable<AlbumShare2.Models.Album>
-
 @{
     ViewData["Title"] = "Index";
 }
@@ -13,6 +12,9 @@
     <thead>
         <tr>
             <th>
+                Preview
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.title)
             </th>
             <th>
@@ -22,20 +24,28 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.User.Id)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    <img src="@{ 
+                        try {
+                            "test".ToString();
+                        } catch { }
+                        } " height="100" width="100" />
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.title)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.User.Id)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
