--- a/AlbumShare2/AlbumShare2/Views/Images/Create.cshtml
+++ b/AlbumShare2/AlbumShare2/Views/Images/Create.cshtml
@@ -18,6 +18,10 @@
                 <span asp-validation-for="url" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="AlbumID" class="control-label"></label>
+                <select asp-for="AlbumID" class ="form-control" asp-items="ViewBag.AlbumID"></select>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </form>
