--- a/AlbumShare2/AlbumShare2/Views/Images/Delete.cshtml
+++ b/AlbumShare2/AlbumShare2/Views/Images/Delete.cshtml
@@ -17,6 +17,12 @@
         <dd>
             @Html.DisplayFor(model => model.url)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Album)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Album.Id)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
