--- a/AlbumShare2/AlbumShare2/Views/Images/Details.cshtml
+++ b/AlbumShare2/AlbumShare2/Views/Images/Details.cshtml
@@ -16,6 +16,12 @@
         <dd>
             @Html.DisplayFor(model => model.url)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Album)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Album.Id)
+        </dd>
     </dl>
 </div>
 <div>
