--- a/AlbumShare2/AlbumShare2/Views/Images/Edit.cshtml
+++ b/AlbumShare2/AlbumShare2/Views/Images/Edit.cshtml
@@ -19,6 +19,11 @@
                 <span asp-validation-for="url" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="AlbumID" class="control-label"></label>
+                <select asp-for="AlbumID" class="form-control" asp-items="ViewBag.AlbumID"></select>
+                <span asp-validation-for="AlbumID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </form>
