--- a/AlbumShare2/AlbumShare2/Views/Images/Index.cshtml
+++ b/AlbumShare2/AlbumShare2/Views/Images/Index.cshtml
@@ -19,7 +19,7 @@
                 Image
             </th>
             <th>
-                Controls
+                @Html.DisplayNameFor(model => model.Album)
             </th>
             <th></th>
         </tr>
@@ -31,7 +31,10 @@
                 <a href="@Html.DisplayFor(modelItem => item.url)">@Html.DisplayFor(modelItem => item.url)</a>
             </td>
             <td>
-                <img src="@Html.DisplayFor(modelItem => item.url)" height="100" width="100"/>
+                <img src="@Html.DisplayFor(modelItem => item.url)" height="100" width="100" />
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Album.Id)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
