First image now loads in album index

--- a/AlbumShare2/AlbumShare2/Views/Albums/Index.cshtml
+++ b/AlbumShare2/AlbumShare2/Views/Albums/Index.cshtml
@@ -18,7 +18,11 @@
                 @Html.DisplayNameFor(model => model.title)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.User)
+                @Html.DisplayNameFor(model => model.User)<br />
+                @Html.DisplayNameFor(model => model.User.name)
+                @Html.DisplayNameFor(model => model.User.email)
+                @Html.DisplayNameFor(model => model.User.phonenum)
+                @Html.DisplayNameFor(model => model.User.address)
             </th>
             <th></th>
         </tr>
@@ -26,13 +30,13 @@
     <tbody>
         @foreach (var item in Model)
         {
+            string url = "images/image15.jpg";
+            try { url = item.Images.First().url; }
+            catch { }
+        
             <tr>
                 <td>
-                    <img src="@{ 
-                        try {
-                            "test".ToString();
-                        } catch { }
-                        } " height="100" width="100" />
+                    <img src="@url" height="100" width="100" />
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.title)
