--- a/AlbumShare2/AlbumShare2/Views/Albums/Index.cshtml
+++ b/AlbumShare2/AlbumShare2/Views/Albums/Index.cshtml
@@ -26,17 +26,24 @@
             try { url = item.Images.First().url; }
             catch { }
         
-        <tr>
-            <td>
-                <img src="@url" height="100" width="100" /><br />
-                @Html.DisplayFor(modelItem => item.title)
+        <tr id="row @Html.DisplayFor(modelItem => item.Id)">
+            <td colspan="3" class="images @Html.DisplayFor(modelItem => item.Id)" hidden>
+                @foreach (var image in item.Images)
+                {
+                    <img src="@image.url" height="100" width="100" />
+                }
+                <span>@Html.DisplayFor(modelItem => item.title)</span>
             </td>
-            <td>
+            <td class="details @Html.DisplayFor(modelItem => item.Id)">
+                <img src="@url" height="100" width="100" /><br />
+                <a class="title">@Html.DisplayFor(modelItem => item.title)</a>
+            </td>
+            <td class="details @Html.DisplayFor(modelItem => item.Id)">
                 <a asp-controller="Users" asp-action="Details" asp-route-id="@item.User.Id">@Html.DisplayFor(modelItem => item.User.name)</a><br />
                 @Html.DisplayFor(modelItem => item.User.email)<br />
                 @Html.DisplayFor(modelItem => item.User.phonenum)
             </td>
-            <td>
+            <td class="details @Html.DisplayFor(modelItem => item.Id)">
                 @Html.DisplayFor(modelItem => item.User.address)
             </td>
         </tr>
