Alright, apparently jsonplaceholder is supposed to be "interfaced" as the data source, not a data viewer. This commit is pre-MeRippingOutTheBackend

--- a/AlbumShare2/AlbumShare2/Views/Albums/Index.cshtml
+++ b/AlbumShare2/AlbumShare2/Views/Albums/Index.cshtml
@@ -23,7 +23,12 @@
     }
 </script>
 <h2>Index</h2>
-
+<form asp-controller="Albums" asp-action="Index">
+    <p>
+        <input type="text" name="SearchString" placeholder="Search for User or Title...">
+        <input type="submit" value="Search" />
+    </p>
+</form>
 <table class="table">
     <thead>
         <tr>
