--- a/AlbumShare2/AlbumShare2/Views/Shared/_Layout.cshtml
+++ b/AlbumShare2/AlbumShare2/Views/Shared/_Layout.cshtml
@@ -26,15 +26,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">AlbumShare</a>
+                <a asp-area="" asp-controller="Albums" asp-action="Index" class="navbar-brand">AlbumShare</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Users" asp-action="Index">Users</a></li>
                     <li><a asp-area="" asp-controller="Albums" asp-action="Index">Albums</a></li>
+                    <li><a asp-area="" asp-controller="Users" asp-action="Index">Users</a></li>
                     <li><a asp-area="" asp-controller="Posts" asp-action="Index">Posts</a></li>
-                    <li><a asp-area="" asp-controller="Images" asp-action="Index">Images</a></li>
                 </ul>
             </div>
         </div>
