--- a/AlbumShare2/AlbumShare2/Views/Users/Details.cshtml
+++ b/AlbumShare2/AlbumShare2/Views/Users/Details.cshtml
@@ -23,10 +23,10 @@
             @Html.DisplayFor(model => model.email)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.phonenum)
+            @Html.DisplayNameFor(model => model.phone)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.phonenum)
+            @Html.DisplayFor(model => model.phone)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.address)
