--- a/AlbumShare2/AlbumShare2/Views/Users/Index.cshtml
+++ b/AlbumShare2/AlbumShare2/Views/Users/Index.cshtml
@@ -19,7 +19,7 @@
                 @Html.DisplayNameFor(model => model.email)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.phonenum)
+                @Html.DisplayNameFor(model => model.phone)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.address)
@@ -37,7 +37,7 @@
                 @Html.DisplayFor(modelItem => item.email)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.phonenum)
+                @Html.DisplayFor(modelItem => item.phone)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.address)
