--- a/AlbumShare2/AlbumShare2/Views/Users/Edit.cshtml
+++ b/AlbumShare2/AlbumShare2/Views/Users/Edit.cshtml
@@ -24,9 +24,9 @@
                 <span asp-validation-for="email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="phonenum" class="control-label"></label>
-                <input asp-for="phonenum" class="form-control" />
-                <span asp-validation-for="phonenum" class="text-danger"></span>
+                <label asp-for="phone" class="control-label"></label>
+                <input asp-for="phone" class="form-control" />
+                <span asp-validation-for="phone" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="address" class="control-label"></label>
