--- a/AlbumShare2/AlbumShare2/Views/Users/Index.cshtml
+++ b/AlbumShare2/AlbumShare2/Views/Users/Index.cshtml
@@ -6,9 +6,6 @@
 
 <h2>Index</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -24,15 +21,14 @@
             <th>
                 @Html.DisplayNameFor(model => model.address)
             </th>
-            <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.name)
-            </td>
+                <a asp-action="Details" asp-route-id="@item.Id">@Html.DisplayFor(modelItem => item.name)</a>
+</td>
             <td>
                 @Html.DisplayFor(modelItem => item.email)
             </td>
@@ -41,11 +37,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.address)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
